# EduVault

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  ENV_REPORT.md  INSTALLED_TOOLBELT.md  NEXUS_EDUVAULT_Blueprint_v7.0_FINAL.md  NEXUS_EDUVAULT_Project_Status_Tracker.md  NEXUS_EDUVAULT_Supreme_Master_Execution_Plan_v4_0.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.json
app/: config.py  main.py
app/agents/: content_agent.py  pipeline.py  prompts.py  research_agent.py
app/api/: dependencies.py  websocket.py
app/builders/: pdf_builder.py  pptx_validator.py  production_builder.py  slide_builder.py  slide_builder_v2.py
app/db/: connection.py
app/models/: core.py  knowledge.py  pipeline.py  requests.py
app/services/: audio_rebuild_service.py  audio_service.py  auth_service.py  catalog_service.py  certification_service.py  chat_service.py  citation_label.py  citation_normalizer.py  dependencies.py  diagram_router.py  diagram_service.py  embeddings.py  generation_service.py  graph_service.py  image_library_service.py  image_search.py  image_service.py  ingestion_service.py  knowledge_repo.py  migration_runner.py  pacing_engine.py  pipeline_telemetry.py  pptx_preview_service.py  rebuild_service.py  regulation_discovery_service.py  regulation_metadata.py  retrieval_v2.py  skeleton_ai_edit_service.py  skeleton_service.py  slide_quality_service.py  ssml.py  studio_service.py
app/templates/: dispensa.html
assets/icons/: iso7010_manifest.json
assets/seeds/: demos_manifest.json  manifest.json
assets/templates/: master_inspection.json  nexus_master.pptx  nexus_master_v2.pptx  nexus_master_v2_claude_design.pptx  nexus_master_v3.pptx  nexus_master_v3_tuned.pptx  nexus_master_v4.pptx  nexus_master_v4_bulletfix.pptx  nexus_master_v4_patched.pptx
config/: __init__.py  catalog_config.py
docs/: AUDIT_BUGS_FOUND.md  B3_TOC_VERIFICATA.md  BRIEF_CLAUDE_DESIGN_TEMPLATE.md  CLIENT_COURSE_MODULES.md  CLIENT_INTAKE_QUESTIONNAIRE.md  CLIENT_INTAKE_TRACKING.md  E2E_FULL_FLOW_REPORT.md  E2E_TESTING_GUIDE.md  GAPS_TO_DEFINE_BEFORE_PHASE7.md  HANDOFF_PHASE2.md  HANDOFF_PHASE6.md  INVENTORY_FEATURES_PRE_DEPLOY.md  PERFORMANCE_QUESTIONS_FOR_ANALYST.md  POLLING_FALLBACK.md  PPTX_RENDER_FIDELITY_AUDIT.md  REBRAND_EDUVAULT_PLAN.md  REFACTOR_HYPOTHESES_CONFIRMED.md  SKILLS_PER_PHASE_CHEATSHEET.md  SKILLS_PLAYBOOK.md  TOOLBELT.md  VERIFICATION_DEBT.md
docs/handoffs/: CHAT_CONVERSATIONAL_FEASIBILITY.md  CLUSTER_G_COURSE_STUDIO_SCOPE.md  COMMIT_MESSAGES_BOZZA.md  DEMO_DEPLOY_QUESTIONS_FOR_ANALYST.md  DEPLOY_GUIDE_STEP_BY_STEP.md  FINAL_MESSAGE_TO_ANALYST.md  H6_CONTEXT_FOR_ANALYST.md  H6_IMPLEMENTATION_PLAN.md  PLAN_31.1_FOR_ANALYST_REVIEW.md  REPLY_TO_ANALYST_3_DEMO_FINAL.md  REPLY_TO_ANALYST_DEMO2_SPOTCHECK.md  REPLY_TO_ANALYST_DEMO2v3_PLUS_PREPOSTI_FIX.md  REPLY_TO_ANALYST_DEMO3v3_FINAL.md  REPLY_TO_ANALYST_DEMO_2v2_3v2_PARTIAL.md  REPLY_TO_ANALYST_DEMO_2v3_3v2_FINAL.md  REPLY_TO_ANALYST_DEPLOY_PLAN.md  REPLY_TO_ANALYST_E25_REBUILD_31_7A.md  REPLY_TO_ANALYST_E25_v2_review9.md  REPLY_TO_ANALYST_E2E20_RESULTS.md  REPLY_TO_ANALYST_E2E21_RESULTS.md  REPLY_TO_ANALYST_E2E22_DIAGNOSIS.md  REPLY_TO_ANALYST_E2E24.md  REPLY_TO_ANALYST_E2E25.md  REPLY_TO_ANALYST_E2E25_DIAGNOSIS.md  REPLY_TO_ANALYST_FINAL_2v2_3v2.md  REPLY_TO_ANALYST_MERGE_STRATEGY.md  REPLY_TO_ANALYST_ON_M3.md  SCALING_ANALYSIS_4h_to_32h.md
frontend/: .env.example  INTEGRATION_NOTES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vercel.json
frontend/src/: main.tsx  routeTree.gen.ts
scripts/: analyze_diagrams_e25.py  backfill_citations.py  build_master_v3.py  build_master_v4.py  check_recap_slides.py  convert_design_export_to_master.py  demo2_generale_4h.py  demo3_preposti_8h.py  diag_ingest_dlgs81.py  dump_3_demo_for_railway.py  e2e_19_run.py  enlarge_logo.py  fix_v2_overlaps.py  generate_iso7010_svgs.py  ingest_accordi.py  inspect_pptx_template.py  inspect_slidesgo.py  inspect_template.py  make_eduvault_favicons.py  make_template_professional.py  patch_master_v4.py  rebrand_master_to_eduvault.py  rebrand_slidesgo_to_cfp.py  rebuild_demo3_v3_fix415.py  rebuild_e25_with_31_7a.py  render_5_diagrams_for_analyst.py  render_all_22_diagrams.py  render_template_preview.py  render_v2_preview.py  seed.py  synth_build_test.py  test_models_comparison.py  tune_master_v3.py  upgrade_template_visuals.py  validate_master_v4.py  verify_31_7a_on_e25.py  verify_course.py  verify_course_slides.py  verify_review9_fix.py
tests/: _helpers.py  conftest.py
tests/integration/: test_admin.py  test_auth.py  test_content_agent.py  test_courses.py  test_generation_service.py  test_generation_service_audio_bg.py  test_health.py  test_image_service.py  test_ingestion.py  test_knowledge_repo.py  test_m1_prevenzione_drop_list.py  test_m3_incidenti_drop_list.py  test_pdf_builder.py  test_pipeline_e2e_no_build.py  (+12 more)
(+171 files in other folders)
